--- a/index.html
+++ b/index.html
@@ -25,54 +25,64 @@
           <a href="#" class="text-white font-medium hover:text-yellow-300">About</a>
         </div>
 
-       <!-- Right: Buttons -->
-<div class="flex items-center space-x-3">
-  <a href="login.html" 
-     class="px-3 py-1 rounded-lg bg-yellow-400 text-black font-semibold hover:bg-yellow-300">
-     Login
-  </a>
-  <a href="signup.html" 
-     class="px-3 py-1 rounded-lg bg-yellow-400 text-black font-semibold hover:bg-yellow-300">
-     Signup
-  </a>
-</div>
+        <!-- Right: Buttons -->
+        <div class="flex items-center space-x-3">
+          <a href="login.html" 
+             class="px-3 py-1 rounded-lg bg-yellow-400 text-black font-semibold hover:bg-yellow-300">
+             Login
+          </a>
+          <a href="signup.html" 
+             class="px-3 py-1 rounded-lg bg-yellow-400 text-black font-semibold hover:bg-yellow-300">
+             Signup
+          </a>
+        </div>
 
       </div>
     </div>
   </nav>
 
   <!-- Page Content -->
-  <div class="pt-20 p-6"> <!-- pt-20 to push content below navbar -->
+  <div class="pt-20 p-6"> 
     <h1 class="text-3xl font-bold text-white mb-6 text-center">My Trello Board</h1>
 
     <!-- Board -->
-    <div id="board" class="flex space-x-4 overflow-x-auto">
-      
-      <!-- Example List -->
-      <div id="list-today" class="list bg-yellow-100 rounded-xl p-4 w-72 flex-shrink-0">
+    <div id="board" class="flex space-x-4 overflow-x-auto pb-6">
+
+      <!-- Today List -->
+      <div class="list bg-yellow-100 rounded-xl p-4 w-72 flex-shrink-0">
         <h2 class="font-semibold mb-3">Today</h2>
-        <div class="cards space-y-2" id="cards-today"></div>
-        <button onclick="showAddCard(this)" class="add-card-btn text-sm text-gray-600 mt-2 hover:underline">+ Add a card</button>
+        <div class="cards space-y-2"></div>
+        <button onclick="showAddCard(this)" class="add-card-btn text-sm text-gray-600 mt-2 hover:underline">
+          + Add a card
+        </button>
       </div>
 
-      <div id="list-week" class="list bg-green-100 rounded-xl p-4 w-72 flex-shrink-0">
+      <!-- This Week List -->
+      <div class="list bg-green-100 rounded-xl p-4 w-72 flex-shrink-0">
         <h2 class="font-semibold mb-3">This Week</h2>
-        <div class="cards space-y-2" id="cards-week"></div>
-        <button onclick="showAddCard(this)" class="add-card-btn text-sm text-gray-600 mt-2 hover:underline">+ Add a card</button>
+        <div class="cards space-y-2"></div>
+        <button onclick="showAddCard(this)" class="add-card-btn text-sm text-gray-600 mt-2 hover:underline">
+          + Add a card
+        </button>
       </div>
 
-      <div id="list-later" class="list bg-gray-100 rounded-xl p-4 w-72 flex-shrink-0">
+      <!-- Later List -->
+      <div class="list bg-gray-100 rounded-xl p-4 w-72 flex-shrink-0">
         <h2 class="font-semibold mb-3">Later</h2>
-        <div class="cards space-y-2" id="cards-later"></div>
-        <button onclick="showAddCard(this)" class="add-card-btn text-sm text-gray-600 mt-2 hover:underline">+ Add a card</button>
+        <div class="cards space-y-2"></div>
+        <button onclick="showAddCard(this)" class="add-card-btn text-sm text-gray-600 mt-2 hover:underline">
+          + Add a card
+        </button>
       </div>
 
-      <!-- Add another list button -->
+      <!-- Add New List -->
       <div id="add-list" class="bg-white/40 rounded-xl p-4 w-72 flex-shrink-0 flex items-center justify-center cursor-pointer hover:bg-white/60" onclick="showAddList()">
         <span class="font-medium text-gray-700">+ Add another list</span>
       </div>
+
     </div>
   </div>
+
 
   <script src="app.js"></script>
 </body>
